Fix layout issue on homepage

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -64,12 +64,14 @@ body {
 .index-info {
     color:#7D8E95;
     padding: 10px;
+    height: fit-content;
 }
 
 .container-fluid {
     padding: 0;
     margin: 0;
     width: 100vw;
+    height: fit-content;
 }
 
 .nature-head {
@@ -84,6 +86,7 @@ body {
     align-items: center;
     justify-content: center;
     height: fit-content;
+    width: 100vw;
     padding: 20px;
     font-family: 'Cardo', sans-serif;
 }
@@ -164,11 +167,11 @@ body {
 }
 
 .carousel-products {
-    align-items: center !important;
+    align-items: center;
     justify-content: center;
-    height: fit-content;
     padding: 0;
     display: flex;
+    background-color: #FBE0C3;
 }
 
 .card-img-overlay {
@@ -178,7 +181,6 @@ body {
 }
 
 .card-title {
-    position: relative;
     text-align: center;
     margin-top: 20vh;
     font-size: 5rem;
@@ -221,8 +223,6 @@ body {
     .hero {
         background-size: cover;
         width: 100vw;
-        margin: 0;
-        padding: 0;
     }
 
     .lead {
